# bpe

./: .gitignore  CMakeLists.txt  DownloadDataset.py  LICENSE  README.md  global.cpp  global.h  main.cpp  merge_rules.txt  testing.py  vocab_text.py
testing/: test.cpp  test.h
training/: generate.cpp  generate.h  training.cpp  training.h
vocab/: ASCII.cpp  ASCII.h  saveDecodeCommon.cpp  saveDecodeCommon.h  vocab.cpp  vocab.h
